--- a/res/html/org/shopping_cart/811/default.tmpl
+++ b/res/html/org/shopping_cart/811/default.tmpl
@@ -11,3 +11,17 @@
       ###WTCART_LL_PRICE###
     </div>
 <!-- ###WTCART_EMPTY### end -->
+
+
+<!-- ###WTCART_MINICART### begin -->
+<div class="wtcart_minicart">
+    <div>###MINICART_COUNT### ###WTCART_LL_COUNT_PRODUCTS_IN_CART###</div>
+    <div>###MINICART_GROSS###</div>
+    <div>###MINICART_LINK###</div>
+</div>
+<!-- ###WTCART_MINICART### end -->
+
+
+<!-- ###WTCART_MINICART_EMPTY### begin -->
+<div class="wtcart_minicart_empty">###WTCART_LL_MINICART_EMPTY###</div>
+<!-- ###WTCART_MINICART_EMPTY### end -->
